2005-01-11  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-dock-item-grip.c:
	(bonobo_dock_item_grip_get_accessible): Fix string.
	s/Un dock/Undock/. Closes bug #132211.

2004-12-11  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* samples/canvdemo/Makefile.am (EXTRA_DIST): Remove
	CanvDemo.server, fixes #160558.

	* samples/controls/Makefile.am (EXTRA_DIST): Remove
	$(server_in_files) and $(server_DATA).  Fixes #160380.

2004-12-02  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.

2004-11-15  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

Sat Nov 13 01:05:27 2004  Jonathan Blandford  <jrb@redhat.com>

	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-selector-widget.c:
	* bonobo/bonobo-selector.c:
	* bonobo/bonobo-ui-toolbar.c:
	* bonobo/bonobo-window.c:
	* tests/test-filesel.c: s/libgnome\/gnome-i18n.h/glib/gi18n.h/g

2004-10-21  Marco Pesenti Gritti  <marco@gnome.org>

	reviewed by: Michael Meeks <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c:
	(impl_bonobo_ui_sync_toolbar_state), (toolbar_build_widget):

	Deprecate pack-end behavior and add a space type for separators.

2004-10-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* bonobo/bonobo-control.c (bonobo_control_set_transient_for): See
	if there is already a GdkWindow wrapper registered for the x11_id,
	reuse it if it exists, otherwise request new one.  Fixes #151378.

2004-10-02  Jesus Bravo Alvarez  <suso@trasno.net>

	* configure.in: Added gl (Galician) to ALL_LINGUAS.

2004-09-29 Matthias Clasen <mclasen@redhat.com>

	Merged from the gnome-2-8 branch by Federico Mena Quintero <federico@ximian.com>:

	* bonobo/bonobo-ui-toolbar-control-item.c: Remove a 
	broken and unneeded finalizer, avoid warnings when
	toolbars are destroyed, and make control toolitems
	non-homogeneous.

2004-09-27  Damien Carbery <damien.carbery@sun.com>

	Fixes #153629

	* tools/browser/bonobo-browser.c: include locale.h.
